MDEV-24585 Assertion `je->s.cs == nice_js->charset()' failed in json_nice.

We should set the charset in
Item_func_json_format::fix_length_and_dec().